--- a/views/header.html
+++ b/views/header.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Treehouse Profile</title>
+    <title>OMDB Profiles</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css" media="screen">
         @import url(http://fonts.googleapis.com/css?family=Varela+Round);
