adding apikey to omdb api

--- a/views/search.html
+++ b/views/search.html
@@ -1,4 +1,4 @@
-<img src="http://i.imgur.com/VKKm0pn.png" alt="Magnifying Glass" id="searchIcon">
+<img src="https://i.imgur.com/VKKm0pn.png" alt="Magnifying Glass" id="searchIcon">
 
 <form action="/" method="POST">
     <input type="text" placeholder="Enter the title of the movie or TV serie" id="omdbSearch" name="omdbSearch">
